# swag/docs/swagger.yaml
@@ -617,6 +617,80 @@ paths:
       summary: Update genre
       tags:
       - Genres
+  /search/fts:
+    get:
+      consumes:
+      - application/json
+      description: Tìm kiếm bài hát thông qua lời
+      parameters:
+      - description: Song's lyric
+        in: query
+        name: lyric
+        required: true
+        type: string
+      - description: Page
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: Page Size
+        in: query
+        name: page_size
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/db.GetSongRow'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/res.ErrSwaggerJson'
+      summary: Tìm kiếm bài hát thông qua lời
+      tags:
+      - Search
+  /search/song:
+    get:
+      consumes:
+      - application/json
+      description: Tìm theo tên bài hát
+      parameters:
+      - description: Song's name
+        in: query
+        name: name
+        required: true
+        type: string
+      - description: Page
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: Page Size
+        in: query
+        name: page_size
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/db.GetSongRow'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/res.ErrSwaggerJson'
+      summary: Tìm theo tên bài hát
+      tags:
+      - Search
   /singers:
     get:
       consumes:
@@ -930,6 +1004,31 @@ paths:
       security:
       - BearerAuth: []
       summary: Thêm thể loại nhạc cho bài hát khác vào bài hát
+      tags:
+      - Songs
+  /songs/lyric:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Create song
+      parameters:
+      - description: Lyric file
+        in: formData
+        name: lyric
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/db.CreateSongRow'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/res.ErrSwaggerJson'
+      summary: Create song
       tags:
       - Songs
   /songs/soft/{id}:
